# brand-positioning

./: .dockerignore  AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: data_guide.md  methods.md
examples/: demo_brand_profiles.csv  demo_sneaker_ratings.csv  ratings_template.csv  ratings_template.xlsx
scripts/: generate_examples.py
src/positionsignal/: __init__.py  comparison.py  errors.py  io.py  mapping.py  plotting.py  validation.py
tests/: test_app_pages.py  test_bootstrap.py  test_comparison.py  test_examples.py  test_mapping.py  test_validation_and_io.py
